# cpp-astro-webview-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
src/: main.cpp
web/: .prettierrc  astro.config.mjs  package-lock.json  package.json
web/src/components/: Welcome.astro
web/src/layouts/: Layout.astro
